--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     color: black
 }
 
-h1{
+h1 {
     text-align: center;
 }
 
@@ -11,26 +11,41 @@ h1{
     width: 12cm;
     height: 14cm;
 }
-.class2{
-   margin-left: 150px;
+
+.class2 {
+    margin-left: 150px;
 }
-.class3 {
-    height: 100%;
+
+.class3 { 
+    
     width: 100%;
 }
+
 .class4 {
-    height: 8cm;
-    width: 6cm;
+    height: 10cm;
+    width: 10cm;
 }
+
+.class5 {
+    height: 9cm;
+    width: 9cm;
+}
+
+.class6 {
+    text-align: center;
+}
+
 .icono1 {
     height: 1.4cm;
     width: 1.4cm;
     border-width: 0.6cm;
 }
+
 .icono2 {
     height: 1.2cm;
     width: 1.2cm;
 }
+
 .class6 {
     height: 7cm;
     width: 3cm;
