--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ h1 {
     margin-left: 150px;
 }
 
-.class3 { 
-    
+.class3 {
+
     width: 100%;
 }
 
@@ -48,5 +48,5 @@ h1 {
 
 .class6 {
     height: 7cm;
-    width: 3cm;
+    width: 3cm
 }
